--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,7 @@ install:
     
 # script to run tests. Script can have many commands, one per line.
 script: 
-  - python3 -m unittest discover -p "test.py"
+  - coverage run -m unittest discover -p "tests.py"
+
+after_script:
+  - bash <(curl -s https://codecov.io/bash)
